# auto_tuner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: DETAILS.md  REPORT.md
examples/: CMakeLists.txt
examples/function_test/: example2.cpp
examples/matrix_multiplication/: example.cpp  matrix_multiplication.c
include/: auto_tuner.h  common.h
include/search/: decision_tree_search.h  grid_search.h  search.h
src/: CMakeLists.txt  common.cpp
src/search/: decision_tree_search.cpp  grid_search.cpp
test/: CMakeLists.txt  main.cpp
test/src/: cmdline_target_tests.cpp  search_tests.cpp
